Fixed project editing and navigation, fixed styling alignments.

--- a/ionic-ui/src/app/pages/project-edit/project-edit.page.scss
+++ b/ionic-ui/src/app/pages/project-edit/project-edit.page.scss
@@ -1,3 +1,5 @@
 .center{
-    text-align: center;
-}
+    margin-left: auto;
+    margin-right: auto;
+    display: block !important;
+  }
